--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -59,6 +59,7 @@
 				<%= render "comments/transmission" %>
 				<%= render "comments/reception" %>
 				<%= render "comments/reception" %>
+				<%= render "comments/transmission" %>
 			</div>
 			<textarea class="comment-box" name=""></textarea>
 			<div href="#"class="button positive box-shadow send">送信</div>
