--- a/app/views/interests/_interest.html.erb
+++ b/app/views/interests/_interest.html.erb
@@ -2,17 +2,12 @@
 <div class="event-box box-shadow">
 <span class="posted-date">投稿日:<%= interest.event.created_at.strftime("%-m月%-d日") %></span>
 	<!-- 新規投稿ラベル -->
-	<div id="newlabel">
-		<div class="new-label"></div>
-		<p class="transform-45deg">New!</p>
-	</div>
+	<%= render "events/new_label" if interest.event.new_arrival?%>
 	<!-- 新規投稿ラベルend -->
 
 	<div class="box-style-block">
 		<%= link_to image_tag(interest.event.user.thumbnail_id.gsub(/_normal/, ""), class: "event-user-image"), "#{interest.event.user.provider_url}", target: "_blank" %>
-		<div class="join-count-box">
-			<p>参加者：<%= interest.event.joins.count %>人</p>
-		</div>
+		<p><%= interest.event.user.nickname %></p>
 	</div>
 	<div class="event-info">
 		<table class="event-status">
@@ -32,6 +27,9 @@
 		</p>
 		<div class="event-description ellipsis">
 			<%= interest.event.description %>
+		</div>
+		<div class="join-count-box">
+			<p>参加者：<%= interest.event.joins.count %>人</p>
 		</div>
 	</div>
 </div>
