--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -11,8 +11,7 @@
 	/*background-color: #5f7ba0;*/
 }
 .grid-item-main{
-	padding-top: 20px;
-	/*background-color: #f5f5f5;*/
+	padding-top: 45px;
 }
 .edit-page{
 	position: relative;
@@ -27,7 +26,7 @@
 	padding-top: 20px;
 	background-color: rgba(0, 0, 0, 0.7);
 	box-shadow: 0px 0px 100px 35px rgba(0, 0, 0, 0.7);
-	z-index: 2;
+	z-index: 9999;
 }
 
 .edit-fillter-wapper .editing{
@@ -112,12 +111,13 @@ input[type="submit"]{
 	padding: 30px 0 60px 0;
 }*/
 .join-count-box{
+	padding-top: 10px;
 	display: flex;
 	width: 100%;
 	color: #abb1b5;
 }
 .join-count-box p{
-	font-size: 15px;
+	font-size: 0.8rem;
 	line-height: 40px;
 }
 .joined-user-icon{
@@ -148,7 +148,7 @@ input[type="submit"]{
 }
 select[name="user[area_id]"]{
 	display: inline-block;
-	margin-bottom: 10px;
+	margin: 10px 0 10px;
 	border: none;
 	color: #efefef;
 	background-color: transparent;
@@ -158,8 +158,15 @@ select[name="user[area_id]"]:hover{
 	background-color: rgba(0, 0, 0, 0.2);
 	border-radius: 50px;
 }
+.user-area-info{
+	margin-bottom: 50px;
+}
 .user-area-info tr{
 	text-align: center;
+}
+.user-area-info td p{
+	display: block;
+	margin-top: 10px;
 }
 .user-area-info .home-area{
 	font-size: 1.0rem;
@@ -205,4 +212,34 @@ select[name="user[area_id]"]:hover{
 	margin-bottom: 5px;
 	font-weight: bold;
 }
+.sub-nav{
+	display: flex;
+	justify-content: flex-end;
+	position: fixed;
+	top: 60px;
+	left: 0;
+	width: 70%;
+	padding-right: 20px;
+	background-color: #bababc;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+	z-index: 8888;
+}
+.tab-list{
+	justify-content: flex-end;
+}
+.sub-nav a{
+	padding: 10px 10px 8px;
+	color: #504946
+	;
+	font-size: 0.8rem;
+	background-color: transparent;
+	border-bottom: solid 2px transparent;
+}
+.sub-nav a:hover{
+	/*background-color: gray;*/
+	border-bottom: 2px solid orangered;
+}
 
+#myself, #myjoins, #mybookmark{
+	padding-top: 100px;
+}
