--- a/app/views/joins/_join.html.erb
+++ b/app/views/joins/_join.html.erb
@@ -2,18 +2,12 @@
 <div class="event-box box-shadow">
 	<span class="posted-date">投稿日:<%= join.event.created_at.strftime("%-m月%-d日") %></span>
 	<!-- 新規投稿ラベル -->
-	<div id="newlabel">
-		<div class="new-label"></div>
-		<p class="transform-45deg">New!</p>
-	</div>
+	<%= render "events/new_label" if join.event.new_arrival? %>
 	<!-- 新規投稿ラベルend -->
 
 	<div class="box-style-block">
 		<%= link_to image_tag(join.event.user.thumbnail_id.gsub(/_normal/, ""), class: "event-user-image"), "#{join.event.user.provider_url}", target: "_blank" %>
 		<p><%= join.event.user.nickname %></p>
-		<div class="join-count-box">
-			<p>参加者：<%= join.event.joins.count %>人</p>
-		</div>
 	</div>
 	<div class="event-info">
 		<table class="event-status">
@@ -33,6 +27,9 @@
 		</p>
 		<div class="event-description ellipsis">
 			<%= join.event.description %>
+		</div>
+		<div class="join-count-box">
+			<p>参加者：<%= join.event.joins.count %>人</p>
 		</div>
 	</div>
 </div>
