--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,5 +1,10 @@
-<div class="text-centering">
+
 	<% if flash.now[:notice] %>
 		<p class="notice"><%= h(flash.now[:notice]) %></p>
+	<% elsif flash[:error] %>
+		<p class="error"><%= h(flash[:error]) %></p>
+	<% elsif flash[:first_welcome] %>
+		<p class="first-welcome"><%= h(flash[:first_welcome]) %></p>
+	<% elsif flash[:welcome] %>
+		<p class="welcome"><%= h(flash[:welcome]) %></p>
 	<% end %>
-</div>
