--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -18,7 +18,7 @@
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous">
     </script>
-    <!-- <script src="semantic/dist/semantic.min.js"></script> -->
+    <script src="semantic/dist/semantic.min.js"></script>
     <!-- <script src='lib/jquery.min.js'></script> -->
     <!-- <script src='lib/moment.min.js'></script> -->
     <!-- <script src='fullcalendar/fullcalendar.js'></script> -->
@@ -47,6 +47,9 @@
                 <i class="fas fa-cogs"></i>
               <% end %>
             </li>
+            <li class="button notification-bell">
+              <i class="far fa-bell"><span class="notification-count">3</span></i>
+            </li>
             <li><%= link_to "Sign out", destroy_user_session_path, class: "button sign-out", method: :delete %></li>
           </ul>
         </nav>
@@ -54,8 +57,8 @@
     </header><!-- /header -->
     <main>
       <div class="main-wrapper">
-      <%= render "layouts/flash_messages" %>
-      <%= yield %>
+        <div id="flash" class="text-centering"><%= render "layouts/flash_messages" %></div>
+        <%= yield %>
       </div>
     </main>
     <footer id="footer" class="">
