--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -137,6 +137,7 @@ input[type="submit"]{
 	object-fit: cover;
 }
 .showpage-thumbnail + p{
+	margin-bottom: 18px;
 	text-align: center;
 }
 .user-introduction{
