--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 	<div class="grid-container">
 		<div class="grid-item-main edit-page">
 			<div class="sub-nav">
-				<%= link_to "ブックマーク", check_list_user_path(current_user) %>
+				<%= link_to "クリップボード", check_list_user_path(current_user) %>
 				<%= link_to "参加予定", join_list_user_path(current_user) %>
 				<%= link_to "自分の予定", user_path(current_user) %>
 			</div>
