--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,9 @@
 /*font-family: "M PLUS Rounded 1c";*/
 /*英語フォント*/
 /*font-family: 'Chakra Petch', sans-serif;*/
-@import "semantic-ui";
-@import "semantic-ui/collections/menu";
+/*@import "bootstrap";
+@import "bootstrap-sprockets";*/
+/*@import "semantic-ui/collections/menu";*/
 
 *, *::before, *::after {
   margin: 0;
@@ -32,7 +33,9 @@
 
 
 h1,h2,h3,h4,h5,h6, body, input[type="text"], textarea{
-	font-family: "M PLUS Rounded 1c" !important;
+	/*font-family: "M PLUS Rounded 1c" !important;*/
+	font-family: 'Noto Sans JP', sans-serif;
+	/*font-family: 'Anton', sans-serif;*/
 }
 html, body{
 	height: 100%;
@@ -74,6 +77,7 @@ label{
 input, select, textarea{
 	outline: 0;
 	background-color: #f5f5f5;
+	font-size: 1rem;
 }
 
 .clearfix::after{
@@ -88,7 +92,10 @@ input, select, textarea{
 }
 
 /*共通-----------------------------*/
-
+.label p{
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 1px
+}
 .new-label{
 	/*三角を形成するCSS*/
 	width: 120px;
@@ -185,7 +192,23 @@ input, select, textarea{
 .facebook{
 	background-color: #3B5998;
 }
-
+.interest{
+	padding: 5px 10px;
+	font-size: 0.8rem;
+	background-color: green;
+}
+.uninterest{
+	padding: 4px 10px;
+	color: green;
+	font-size: 0.8rem;
+	border: solid 1px green;
+}
+.uninterest, .uninterest i{
+	color: green;
+}
+.interest, .interest i{
+	color: #efefef;
+}
 .sign-up-style,
 .log-in-style{
 	border: none;
@@ -239,19 +262,24 @@ input, select, textarea{
 .app-intro{
 	display: flex;
 	flex-direction: row;
+	margin-bottom: 20px;
 }
 .app-intro:nth-child(even){
 	flex-direction: row-reverse;
 }
 .app-intro-img1{
-	width: 300px;
+	min-width: 300px;
 	height: 250px;
 	background-color: lime;
 }
 .app-intro-text{
-	background-color: pink;
+	margin: auto;
+}
+.app-intro-text p{
+	padding: 0 20px;
 }
 .about-box i{
+	padding-top: 20px;
 	font-size: 8rem;
 	display: block;
 	text-align: center;
@@ -265,11 +293,32 @@ input, select, textarea{
     position: absolute;
     width: 100%;
     bottom: 0px;
+    text-align: center;
 }
 .whats{
+	display: inline-block;
 	text-align: center;
 	letter-spacing: 1px;
 	padding-top: 30px;
+}
+.whats::after{
+	content: "▼";
+	display: block;
+	text-align: center;
+	color: #efefef;
+	transition: 200ms;
+}
+.whats:hover::after{
+	transform: translateY(10px);
+	opacity: 0;
+}
+.whats a{
+	display: inline-block;
+	font-size: 1.3rem;
+	color: #efefef;
+}
+.whats a::first-letter{
+	color: orangered;
 }
 .change-entrance{
 	width: 180px;
