--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -62,7 +62,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url("/images/footer-image.jpg");
+	background-image: url("/images/footer-image2.jpg");
 	background-attachment: fixed;
 	opacity: 0.5;
 }
@@ -130,7 +130,9 @@
 	padding: 0 50px 0 10px;
 	justify-content: center;
 }
-
+.organizer{
+	margin-top: 20px;
+}
 .organizer-info-box{
 	width: 100%;
 }
@@ -186,11 +188,11 @@
 }
 
 .join{
+	color: #504946;
 	padding: 5px 15px;
 	display: inline-block;
-	font-size: 15px;
+	font-size: 0.8rem;
 	background-color: pink;
-	margin-bottom: 20px;
 }
 
 
@@ -215,7 +217,8 @@
 	left: 0;
 	width: 100%;
 	height: 50px;
-	background: linear-gradient(transparent, #f5f5f5)
+	background: linear-gradient(transparent, #f5f5f5);
+	z-index: 1000;
 }
 .comment-box{
 	resize: none;
@@ -269,7 +272,7 @@
 	position: relative;
 	max-width: 260px;
 	border-radius: 5px;
-	padding: 0 10px;
+	padding: 5px 10px;
 	font-size: 15px;
 }
 
