--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,12 +2,12 @@
 		<%= form_for @event, class: "ui large form event-form-box" do |f| %>
 			<div class="field">
 				<%= f.label :title, "タイトル", class: "form-label" %>
-				<%= f.text_field :title, placeholder: "丸沼高原に行きまーす！" %>
+				<%= f.text_field :title, placeholder: "例：丸沼高原に行きまーす！" %>
 			</div>
 			<div class="field new">
 				<!-- <div class="form-label">詳細</div> -->
 				<%= f.label :description, "詳細", class: "form-label" %>
-				<%= f.text_area :description, class: "new-event-description" %>
+				<%= f.text_area :description, class: "new-event-description", placeholder: "例：#{@placeholder_text}" %>
 			</div>
 			<div class="field">
 				<%= f.label :date, "日程", class: "form-label" %>
@@ -22,5 +22,4 @@
 			</div>
 			<%= f.submit("投稿", class: "button event-submit-style box-shadow") %>
 		<% end %>
-		<div id="calendar"></div>
 	</div>
